--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,7 @@ per-file-ignores =
     test/opengl_rendering.py: F401
 
 exclude = venv
-extend-select = B901, C401, C408, C409
+extend-select = B901, C401, C408, C409, TOR0, TOR1, TOR2
 
 [pydocstyle]
 ;select = D417 # Missing argument descriptions in the docstring
