--- a/examples/sac/config.yaml
+++ b/examples/sac/config.yaml
@@ -1,17 +1,17 @@
 # environment and task
 env:
-  name: Hopper-v3
+  name: Ant-v3
   task: ""
-  exp_name: "Hopper-SAC"
+  exp_name: "Ant-SAC"
   library: gym
   frame_skip: 1
-  max_episode_steps: 1000
+  max_episode_steps: 5000
   seed: 1
 
 # collector
 collector:
   total_frames: 1_000_000
-  init_random_frames: 25000
+  init_random_frames: 10000
   frames_per_batch: 1000
   max_frames_per_traj: 1000
   init_env_steps: 1000
@@ -29,11 +29,11 @@ optim:
   utd_ratio: 1.0
   gamma: 0.99
   loss_function: l2
-  lr: 1.0e-3
-  weight_decay: 0.0
+  lr: 3.0e-4
+  weight_decay: 1.e-4
   batch_size: 256
   target_update_polyak: 0.995
-  alpha_init: 0.2
+  alpha_init: 1.0
   adam_eps: 1.0e-8
 
 # network
