--- a/examples/td3/config.yaml
+++ b/examples/td3/config.yaml
@@ -6,7 +6,7 @@ env:
   library: gym
   frame_skip: 1
   seed: 42
-  max_episode_steps: 1_000_000
+  max_episode_steps: 1000
 
 # collector
 collector:
@@ -14,7 +14,7 @@ collector:
   init_random_frames: 25_000
   init_env_steps: 1000
   frames_per_batch: 1000
-  max_frames_per_traj: 1000
+  max_frames_per_traj:
   collector_device: cpu
   env_per_collector: 1
   num_workers: 1
@@ -31,7 +31,7 @@ optim:
   loss_function: l2
   lr: 3.0e-4
   weight_decay: 0.0
-  adam_eps: 1e-8
+  adam_eps: 1e-4
   batch_size: 256
   target_update_polyak: 0.995
   policy_update_delay: 2
