--- a/examples/sac/config.yaml
+++ b/examples/sac/config.yaml
@@ -4,7 +4,6 @@ env:
   task: ""
   exp_name: "Ant-SAC"
   library: gym
-  frame_skip: 1
   max_episode_steps: 5000
   seed: 1
 
@@ -23,6 +22,7 @@ collector:
 replay_buffer:
   size: 1000000
   prb: 0 # use prioritized experience replay
+  scratch_dir: ant_seed3
 
 # optim
 optim:
