--- a/examples/sac/config.yaml
+++ b/examples/sac/config.yaml
@@ -2,7 +2,7 @@
 env:
   name: Ant-v3
   task: ""
-  exp_name: "Ant-SAC"
+  exp_name: ${env.name}_SAC
   library: gym
   max_episode_steps: 5000
   seed: 1
@@ -22,7 +22,7 @@ collector:
 replay_buffer:
   size: 1000000
   prb: 0 # use prioritized experience replay
-  scratch_dir: ant_seed3
+  scratch_dir: ${env.exp_name}_${env.seed}
 
 # optim
 optim:
