--- a/examples/td3/config.yaml
+++ b/examples/td3/config.yaml
@@ -2,9 +2,8 @@
 env:
   name: Walker2d-v3
   task: ""
-  exp_name: "Walker2d-TD3"
+  exp_name: ${env.name}_TD3
   library: gym
-  frame_skip: 1
   seed: 42
   max_episode_steps: 5000
 
@@ -24,6 +23,7 @@ collector:
 replay_buffer:
   prb: 0 # use prioritized experience replay
   size: 1000000
+  scratch_dir: ${env.exp_name}_${env.seed}
 
 # optim
 optim:
