--- a/examples/sac/config.yaml
+++ b/examples/sac/config.yaml
@@ -10,7 +10,7 @@ env:
 # collector
 collector:
   total_frames: 1_000_000
-  init_random_frames: 10000
+  init_random_frames: 25000
   frames_per_batch: 1000
   init_env_steps: 1000
   collector_device: cpu
@@ -29,7 +29,7 @@ optim:
   gamma: 0.99
   loss_function: l2
   lr: 3.0e-4
-  weight_decay: 1.e-4
+  weight_decay: 0.0
   batch_size: 256
   target_update_polyak: 0.995
   alpha_init: 1.0
