--- a/examples/cql/offline_config.yaml
+++ b/examples/cql/offline_config.yaml
@@ -3,7 +3,7 @@ env:
   name: Hopper-v2
   task: ""
   library: gym
-  exp_name: cql_hopper-medium-v2
+  exp_name: cql_${replay_buffer.dataset}
   n_samples_stats: 1000
   frame_skip: 1
   reward_scaling: 1.0
