--- a/examples/iql/online_config.yaml
+++ b/examples/iql/online_config.yaml
@@ -3,7 +3,7 @@ env:
   name: Pendulum-v1
   task: ""
   library: gym
-  exp_name: iql_pendulum_gym
+  exp_name: iql_${env.name}
   n_samples_stats: 1000
   frame_skip: 1
   reward_scaling: 1.0
