--- a/examples/rlhf/config/train_rlhf.yaml
+++ b/examples/rlhf/config/train_rlhf.yaml
@@ -32,5 +32,6 @@ train:
     num_rollouts_per_epoch: 32
 sys:
   device: cuda # examples: 'cpu', 'cuda', 'cuda:0', 'cuda:1' etc., or try 'mps' on macbooks
+  ref_device: cuda:1  # device of reference model
   dtype: bfloat16 # 'float32', 'bfloat16', or 'float16', the latter will auto implement a GradScaler
   compile: True # use PyTorch 2.0 to compile the model to be faster
