--- a/examples/ddpg/config.yaml
+++ b/examples/ddpg/config.yaml
@@ -25,7 +25,7 @@ replay_buffer:
   prb: 0 # use prioritized experience replay
 
 # Optimization
-optimization:
+optim:
   utd_ratio: 1.0
   gamma: 0.99
   loss_function: smooth_l1
