--- a/examples/rlhf/config/train_rlhf.yaml
+++ b/examples/rlhf/config/train_rlhf.yaml
@@ -2,6 +2,7 @@ io:
   eval_interval: 6
   log_interval: 1
   eval_iters: 10
+  logger: wandb
 data:
   batch_size: 4 # if gradient_accumulation_steps > 1, this is the micro-batch size
   block_size: 550
