--- a/.github/workflows/nightly_build.yml
+++ b/.github/workflows/nightly_build.yml
@@ -126,7 +126,7 @@ jobs:
           python3 -mpip install numpy pytest --no-cache-dir
       - name: Install tensordict
         run: |
-          python3 -mpip install git+https://github.com/pytorch-labs/tensordict.git
+          python3 -mpip install git+https://github.com/pytorch/tensordict.git
       - name: Download built wheels
         uses: actions/download-artifact@v2
         with:
@@ -239,7 +239,7 @@ jobs:
           python3 -mpip install --upgrade pip
       - name: Install tensordict
         run: |
-          python3 -mpip install git+https://github.com/pytorch-labs/tensordict.git
+          python3 -mpip install git+https://github.com/pytorch/tensordict.git
       - name: Install test dependencies
         run: |
           export PATH="/opt/python/${{ matrix.python_version[1] }}/bin:$PATH"
@@ -334,7 +334,7 @@ jobs:
           python3 -mpip install numpy pytest --no-cache-dir
       - name: Install tensordict
         run: |
-          python3 -mpip install git+https://github.com/pytorch-labs/tensordict.git
+          python3 -mpip install git+https://github.com/pytorch/tensordict.git
       - name: Download built wheels
         uses: actions/download-artifact@v2
         with:
