--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Setup Environment
         run: |
           python -m pip install --pre torch --index-url https://download.pytorch.org/whl/nightly/cpu 
-          python -m pip install git+https://github.com/pytorch-labs/tensordict 
+          python -m pip install git+https://github.com/pytorch/tensordict 
           python setup.py develop
           python -m pip install pytest pytest-benchmark
           python -m pip install dm_control
@@ -94,7 +94,7 @@ jobs:
     - name: Setup Environment
       run: |
         python3 -m pip install --pre torch --index-url https://download.pytorch.org/whl/nightly/cu118 
-        python3 -m pip install git+https://github.com/pytorch-labs/tensordict 
+        python3 -m pip install git+https://github.com/pytorch/tensordict 
         python3 setup.py develop
         python3 -m pip install pytest pytest-benchmark
         python3 -m pip install dm_control
