--- a/examples/impala/config_multi_node_submitit.yaml
+++ b/examples/impala/config_multi_node_submitit.yaml
@@ -4,10 +4,10 @@ env:
 
 # SLURM config
 slurm_config:
-  timeout_min: 10,
-  slurm_partition: "train",
-  slurm_cpus_per_task: 32,
-  slurm_gpus_per_node: 0,
+  timeout_min: 10
+  slurm_partition: train
+  slurm_cpus_per_task: 32
+  slurm_gpus_per_node: 0
 
 # collector
 collector:
