--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       matrix:
         python_version: [["3.8", "cp38-cp38"], ["3.9", "cp39-cp39"], ["3.10", "cp310-cp310"], ["3.11", "cp311-cp311"]]
-        cuda_support: [["", "--extra-index-url https://download.pytorch.org/whl/cpu", "\"['cpu', '11.3', '11.6']\"", "cpu"]]
+        cuda_support: [["", "--index-url https://download.pytorch.org/whl/cpu", "\"['cpu', '11.3', '11.6']\"", "cpu"]]
     container: pytorch/manylinux-${{ matrix.cuda_support[3] }}
     steps:
       - name: Checkout torchrl
@@ -67,7 +67,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Install PyTorch RC
         run: |
-          python3 -mpip install torch --extra-index-url https://download.pytorch.org/whl/cpu
+          python3 -mpip install torch --index-url https://download.pytorch.org/whl/cpu
       - name: Build wheel
         run: |
           export CC=clang CXX=clang++
@@ -99,7 +99,7 @@ jobs:
       - name: Install PyTorch RC
         shell: bash
         run: |
-          python3 -mpip install torch --extra-index-url https://download.pytorch.org/whl/cpu
+          python3 -mpip install torch --index-url https://download.pytorch.org/whl/cpu
       - name: Build wheel
         shell: bash
         run: |
@@ -134,7 +134,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Install PyTorch RC
         run: |
-          python3 -mpip install torch torchvision --extra-index-url https://download.pytorch.org/whl/cpu
+          python3 -mpip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
       - name: Upgrade pip
         run: |
           python3 -mpip install --upgrade pip
@@ -184,7 +184,7 @@ jobs:
       - name: Install PyTorch RC
         shell: bash
         run: |
-          python3 -mpip install torch torchvision --extra-index-url https://download.pytorch.org/whl/cpu
+          python3 -mpip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
       - name: Upgrade pip
         shell: bash
         run: |
