--- a/examples/dqn/config_atari.yaml
+++ b/examples/dqn/config_atari.yaml
@@ -6,8 +6,8 @@ env:
 collector:
   total_frames: 40_000_100
   frames_per_batch: 16
-  start_e: 1.0
-  end_e: 0.01
+  eps_start: 1.0
+  eps_end: 0.01
   annealing_frames: 4_000_000
   init_random_frames: 200_000
 
@@ -15,6 +15,7 @@ collector:
 buffer:
   buffer_size: 1_000_000
   batch_size: 32
+  scratch_dir: null
 
 # logger
 logger:
