--- a/.github/workflows/test-linux-jumanji.yml
+++ b/.github/workflows/test-linux-jumanji.yml
@@ -17,6 +17,10 @@ concurrency:
 
 jobs:
   unittests:
+    strategy:
+      matrix:
+        python_version: ["3.9"]
+        cuda_arch_version: ["12.1"]
     uses: pytorch/test-infra/.github/workflows/linux_job.yml@main
     with:
       repository: pytorch/rl
