--- a/.github/workflows/test-linux-robohive.yml
+++ b/.github/workflows/test-linux-robohive.yml
@@ -11,6 +11,10 @@ on:
 
 jobs:
   unittests:
+    strategy:
+      matrix:
+        python_version: ["3.9"]
+        cuda_arch_version: ["12.1"]
     uses: pytorch/test-infra/.github/workflows/linux_job.yml@main
     with:
       repository: pytorch/rl
