[CI] Fix CI (python and cuda versions) (#1621)

--- a/.github/workflows/test-linux-envpool.yml
+++ b/.github/workflows/test-linux-envpool.yml
@@ -11,6 +11,10 @@ on:
 
 jobs:
   unittests:
+    strategy:
+      matrix:
+        python_version: ["3.9"]
+        cuda_arch_version: ["12.1"]
     uses: pytorch/test-infra/.github/workflows/linux_job.yml@main
     with:
       repository: pytorch/rl
@@ -22,8 +26,8 @@ jobs:
       timeout: 120
       script: |
         set -euo pipefail
-        export PYTHON_VERSION="3.8"
-        export CU_VERSION="11.7"
+        export PYTHON_VERSION="3.9"
+        export CU_VERSION="12.1"
         export TAR_OPTIONS="--no-same-owner"
         export UPLOAD_CHANNEL="nightly"
         export TF_CPP_MIN_LOG_LEVEL=0
