--- a/examples/iql/online_config.yaml
+++ b/examples/iql/online_config.yaml
@@ -1,50 +1,46 @@
-env_name: Pendulum-v1
-env_library: gym
-exp_name: "iql_pendulum"
-seed: 42
-async_collection: 1
-record_video: 0
-frame_skip: 1
+env:
+  name: Pendulum-v1
+  library: gym
+  async_collection: 1
+  record_video: 0
+  frame_skip: 1
 
-total_frames: 1000000
-init_env_steps: 10000
-init_random_frames: 5000
-# Updates
-utd_ratio: 1.0
-batch_size: 256
-lr: 3e-4
-weight_decay: 0.0
-target_update_polyak: 0.995
-multi_step: 1.0
-gamma: 0.99
+logger:
+  exp_name: "iql_pendulum"
+  backend: wandb
+  mode: online
 
-tanh_loc: False
-default_policy_scale: 1.0
-scale_lb: 0.1
-activation: elu
-from_pixels: 0
-collector_device: cuda:0
-env_per_collector: 5
-frames_per_batch: 1000 # 5*200
-max_frames_per_traj: 200
-num_workers: 1
+optim:
+  seed: 42
+  utd_ratio: 1.0
+  lr: 3e-4
+  weight_decay: 0.0
+  eps: 1e-4
 
-record_frames: 10000
-loss_function: smooth_l1
-batch_transform: 1
-buffer_prefetch: 64
-norm_stats: 1
+network:
+  tanh_loc: False
+  default_policy_scale: 1.0
+  scale_lb: 0.1
+  device: "cuda:0"
 
-device: "cuda:0"
+collector:
+  total_frames: 1000000
+  init_random_frames: 5000
+  device: cuda:0
+  frames_per_batch: 1000 # 5*200
+  env_per_collector: 5
+  max_frames_per_traj: 200
 
 # IQL hyperparameter
-temperature: 3.0
-expectile: 0.7
+loss:
+  temperature: 3.0
+  expectile: 0.7
+  gamma: 0.99
+  target_update_polyak: 0.995
+  loss_function: smooth_l1
 
-# Logging
-logger: wandb
-mode: online
-
-# Replay Buffer
-prb: 0
-buffer_size: 100000
+buffer:
+  prefetch: 64
+  prb: 0
+  size: 100000
+  batch_size: 256
