--- a/examples/cql/online_config.yaml
+++ b/examples/cql/online_config.yaml
@@ -18,7 +18,7 @@ collector:
   multi_step: 0
   init_random_frames: 1000
   env_per_collector: 1
-  collector_device: cpu
+  device: cpu
   max_frames_per_traj: 200
 
 # logger
