--- a/examples/dqn/config.yaml
+++ b/examples/dqn/config.yaml
@@ -16,7 +16,7 @@ lr: 3e-4
 multi_step: 1
 init_random_frames: 25000
 from_pixels: 1
-collector_device: cpu
+device: cpu
 env_per_collector: 8
 num_workers: 32
 lr_scheduler: ""
