--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -105,3 +105,10 @@ jobs:
           branch: gh-pages # The branch the action should deploy to.
           folder: docs/_local_build/ # The folder the action should deploy.
           CLEAN: false
+
+  upload-docs:
+    uses: pytorch/test-infra/.github/workflows/linux_job.yml@main
+    with:
+      runner: linux.2xlarge
+      script: |
+        cp -r docs/_local_build/* "${RUNNER_DOCS_DIR}"
