--- a/examples/cql/online_config.yaml
+++ b/examples/cql/online_config.yaml
@@ -12,9 +12,9 @@ env:
 # Collector
 collector:
   frames_per_batch: 1000
-  total_frames: 1000000 
+  total_frames: 20000
   multi_step: 0
-  init_random_frames: 25_000
+  init_random_frames: 5_000
   env_per_collector: 1
   device: cpu
   max_frames_per_traj: 1000
