--- a/examples/iql/online_config.yaml
+++ b/examples/iql/online_config.yaml
@@ -13,9 +13,9 @@ env:
 # collector
 collector:
   frames_per_batch: 200
-  total_frames: 1000000 
+  total_frames: 20000
   multi_step: 0
-  init_random_frames: 25000
+  init_random_frames: 5000
   env_per_collector: 1
   collector_device: cpu
   max_frames_per_traj: 200
