--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -44,10 +44,11 @@ jobs:
         conda create --prefix "${env_dir}" -y python=3.8
         printf "* Activating\n"
         conda activate "${env_dir}"
-    - name: Update pip
+    - name: Update pip and setuptools
       run: |
         apt-get install python3.8 python3-pip -y
         pip3 install --upgrade pip
+        pip3 install setuptools -U
     - name: check python version
       run: |
         python3 --version
