move to test-infra script

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -16,21 +16,19 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build_docs_job:
-    runs-on: linux.g5.4xlarge.nvidia.gpu
-    defaults:
-      run:
-        shell: bash -l {0}
-    container: nvidia/cudagl:11.4.0-runtime
-    steps:
-    - name: Install deps
-      run: |
+  unittests:
+    strategy:
+      matrix:
+        python_version: ["3.9"]
+        cuda_arch_version: ["12.1"]
+    uses: pytorch/test-infra/.github/workflows/linux_job.yml@main
+    with:
+      repository: pytorch/rl
+      runner: "linux.g5.4xlarge.nvidia.gpu"
+      docker-image: "nvidia/cudagl:11.4.0-base"
+      timeout: 120
+      script: |
         apt-get update && apt-get install -y git wget gcc g++
-    - name: Checkout
-      uses: actions/checkout@v3
-    # Update references
-    - name: Script
-      run: |
         root_dir="$(pwd)"
         conda_dir="${root_dir}/conda"
         env_dir="${root_dir}/env"
@@ -82,28 +80,29 @@ jobs:
         bash -ic "PYOPENGL_PLATFORM=egl MUJOCO_GL=egl sphinx-build ./source _local_build" || code=$?; if [[ $code -ne 124 && $code -ne 0 ]]; then exit $code; fi
         # PYOPENGL_PLATFORM=egl MUJOCO_GL=egl sphinx-build ./source _local_build
         cd ..
-    - name: Install rsync 📚
-      run: |
-        apt-get update && apt-get install -y rsync
-    - name: Pull TensorDict docs
-      run: |
-        git clone --branch gh-pages https://github.com/pytorch/tensordict.git docs/_local_build/tensordict
-        rm -rf docs/_local_build/tensordict/.git
-    - name: Get output time
-      run: echo "The time was ${{ steps.build.outputs.time }}"
-    - name: Upload wheel for download
-      uses: actions/upload-artifact@v2
-      with:
-        name: build
-        path: docs/_local_build/
-    - name: Deploy
-      if: ${{ github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch' }}
-      uses: JamesIves/github-pages-deploy-action@releases/v4
-      with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          branch: gh-pages # The branch the action should deploy to.
-          folder: docs/_local_build/ # The folder the action should deploy.
-          CLEAN: false
+
+#    - name: Install rsync 📚
+#      run: |
+#        apt-get update && apt-get install -y rsync
+#    - name: Pull TensorDict docs
+#      run: |
+#        git clone --branch gh-pages https://github.com/pytorch/tensordict.git docs/_local_build/tensordict
+#        rm -rf docs/_local_build/tensordict/.git
+#    - name: Get output time
+#      run: echo "The time was ${{ steps.build.outputs.time }}"
+#    - name: Upload wheel for download
+#      uses: actions/upload-artifact@v2
+#      with:
+#        name: build
+#        path: docs/_local_build/
+#    - name: Deploy
+#      if: ${{ github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch' }}
+#      uses: JamesIves/github-pages-deploy-action@releases/v4
+#      with:
+#          token: ${{ secrets.GITHUB_TOKEN }}
+#          branch: gh-pages # The branch the action should deploy to.
+#          folder: docs/_local_build/ # The folder the action should deploy.
+#          CLEAN: false
 
   upload-docs:
     needs: build_docs_job
