--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -16,7 +16,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  unittests:
+  build-docs:
     strategy:
       matrix:
         python_version: ["3.9"]
@@ -28,6 +28,8 @@ jobs:
       docker-image: "nvidia/cudagl:11.4.0-base"
       timeout: 120
       script: |
+        set -e
+        set -v
         apt-get update && apt-get install -y git wget gcc g++
         root_dir="$(pwd)"
         conda_dir="${root_dir}/conda"
@@ -77,13 +79,66 @@ jobs:
         # 10. Build doc
         cd ./docs
         # timeout 7m bash -ic "MUJOCO_GL=egl sphinx-build ./source _local_build" || code=$?; if [[ $code -ne 124 && $code -ne 0 ]]; then exit $code; fi
-        bash -ic "PYOPENGL_PLATFORM=egl MUJOCO_GL=egl sphinx-build ./source _local_build" || code=$?; if [[ $code -ne 124 && $code -ne 0 ]]; then exit $code; fi
-        # PYOPENGL_PLATFORM=egl MUJOCO_GL=egl sphinx-build ./source _local_build
+        # bash -ic "PYOPENGL_PLATFORM=egl MUJOCO_GL=egl sphinx-build ./source _local_build" || code=$?; if [[ $code -ne 124 && $code -ne 0 ]]; then exit $code; fi
+        PYOPENGL_PLATFORM=egl MUJOCO_GL=egl sphinx-build ./source _local_build
         cd ..
-  upload-docs:
-    needs: build_docs_job
+        cp -r docs/_local_build "${RUNNER_ARTIFACT_DIR}"
+
+        if [[ ${{ github.event_name == 'pull_request' }} ]]; then
+          cp -r build/html/* "${RUNNER_DOCS_DIR}"
+        fi
+
+  upload:
+    needs: build-docs
+    if: github.repository == 'pytorch/rl' && github.event_name == 'push' && 
+        ((github.ref_type == 'branch' && github.ref_name == 'main') || github.ref_type == 'tag')
+    permissions:
+      contents: write
     uses: pytorch/test-infra/.github/workflows/linux_job.yml@main
     with:
-      runner: linux.2xlarge
+      repository: pytorch/rl
+      download-artifact: docs
+      ref: gh-pages
+      test-infra-ref: main
       script: |
-        cp -r docs/_local_build/* "${RUNNER_DOCS_DIR}"
+        set -euo pipefail
+
+        REF_TYPE=${{ github.ref_type }}
+        REF_NAME=${{ github.ref_name }}
+
+        # TODO: adopt this behaviour
+        # if [[ "${REF_TYPE}" == branch ]]; then
+        #   TARGET_FOLDER="${REF_NAME}"
+        # elif [[ "${REF_TYPE}" == tag ]]; then
+        #   case "${REF_NAME}" in
+        #     *-rc*)
+        #       echo "Aborting upload since this is an RC tag: ${REF_NAME}"
+        #       exit 0
+        #       ;;
+        #     *)
+        #       # Strip the leading "v" as well as the trailing patch version. For example:
+        #       # 'v0.15.2' -> '0.15'
+        #       TARGET_FOLDER=$(echo "${REF_NAME}" | sed 's/v\([0-9]\+\)\.\([0-9]\+\)\.[0-9]\+/\1.\2/')
+        #       ;;
+        #   esac
+        # fi
+        # echo "Target Folder: ${TARGET_FOLDER}"
+        TARGET_FOLDER="./"
+
+        # mkdir -p "${TARGET_FOLDER}"
+        # rm -rf "${TARGET_FOLDER}"/*
+        mv "${RUNNER_ARTIFACT_DIR}"/html/* "${TARGET_FOLDER}"
+        git add "${TARGET_FOLDER}" || true
+
+        # if [[ "${TARGET_FOLDER}" == main ]]; then
+        #   mkdir -p _static
+        #   rm -rf _static/*
+        #   cp -r "${TARGET_FOLDER}"/_static/* _static
+        #   git add _static || true
+        # fi
+
+        git config user.name 'pytorchbot'
+        git config user.email 'soumith+bot@pytorch.org'
+        git config http.postBuffer 524288000
+        git commit -m "auto-generating sphinx docs" || true
+        git push
