Copy everything from the artifatcs to the docs dir

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -120,5 +120,5 @@ jobs:
         echo $RUNNER_ARTIFACT_DIR
         ls -l $RUNNER_ARTIFACT_DIR
 
-        cp -r "${RUNNER_ARTIFACT_DIR}" "${RUNNER_DOCS_DIR}"
+        cp -r "${RUNNER_ARTIFACT_DIR}"/* "${RUNNER_DOCS_DIR}"
         sleep 300
