--- a/examples/iql/online_config.yaml
+++ b/examples/iql/online_config.yaml
@@ -17,7 +17,7 @@ collector:
   multi_step: 0
   init_random_frames: 5000
   env_per_collector: 1
-  collector_device: cpu
+  device: cpu
   max_frames_per_traj: 200
 
 # logger
