--- a/examples/dreamer/config.yaml
+++ b/examples/dreamer/config.yaml
@@ -1,24 +1,24 @@
-env_name: cheetah
+env_name: ContinuousCartPole-v0
 env_task: run
-env_library: dm_control
+env_library: gym
 catframes: 1
 async_collection: True
 record_video: 0
-frame_skip: 2
+frame_skip: 1
 batch_size: 50
-batch_length: 50
-total_frames: 5000000
+batch_length: 25
+total_frames: 500000
 world_model_lr: 6e-4
 actor_value_lr: 8e-5
 from_pixels: True
 # we want 50 frames / traj in the replay buffer. Given the frame_skip=2 this makes each traj 100 steps long
 env_per_collector: 8
 num_workers: 8
-collector_device: cuda:1
+collector_device: cpu
 model_device: cuda:0
 frames_per_batch: 800
 optim_steps_per_batch: 80
-record_interval: 30
+record_interval: 1
 max_frames_per_traj: 1000
 record_frames: 1000
 batch_transform: 1
@@ -30,9 +30,10 @@ image_size : 64
 buffer_size: 20000
 init_env_steps: 1000
 init_random_frames: 5000
-logger: csv
+logger: wandb
 offline_logging: False
 normalize_rewards_online: True
 normalize_rewards_online_scale: 5.0
 normalize_rewards_online_decay: 0.99999
 reward_scaling: 1.0
+discount_loss: True
