--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -57,16 +57,12 @@ jobs:
 
   benchmark_gpu:
     name: GPU Pytest benchmark
-    runs-on: ubuntu-22.04
-    strategy:
-      matrix:
-        include:
-         - os: linux.g5.4xlarge.nvidia.gpu
-           python-version: 3.8
+    runs-on: linux.g5.4xlarge.nvidia.gpu
     defaults:
       run:
         shell: bash -l {0}
     container: nvidia/cuda:12.3.0-base-ubuntu22.04
+    options: --gpus all
     steps:
     - name: Install deps
       run: |
@@ -98,6 +94,11 @@ jobs:
         python3 setup.py develop
         python3 -m pip install pytest pytest-benchmark
         python3 -m pip install dm_control
+    - name: check GPU presence
+      run: |
+        python -c """import torch
+        assert torch.cuda.device_count()
+        """
     - name: Run benchmarks
       run: |
         cd benchmarks/
