--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -61,8 +61,9 @@ jobs:
     defaults:
       run:
         shell: bash -l {0}
-    container: nvidia/cuda:12.3.0-base-ubuntu22.04
-    options: --gpus all
+    container:
+      image: nvidia/cuda:12.3.0-base-ubuntu22.04
+      options: --gpus all
     steps:
     - name: Install deps
       run: |
